--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,113 @@
-openai==1.12.0
-pinecone-client==3.0.3
-pandas==2.1.4
+acres==0.5.0
+annotated-types==0.7.0
+anyio==4.10.0
+appnope==0.1.4
+asttokens==3.0.0
+async-timeout==4.0.3
+blinker==1.9.0
+certifi==2025.8.3
+charset-normalizer==3.4.3
+ci-info==0.3.0
+click==8.1.8
+comm==0.2.2
+configobj==5.0.9
+configparser==7.2.0
+debugpy==1.8.15
+decorator==5.2.1
+distro==1.9.0
+etelemetry==0.3.1
+exceptiongroup==1.3.0
+executing==2.2.0
+filelock==3.18.0
+Flask==3.1.0
+greenlet==3.2.4
+h11==0.16.0
+httpcore==1.0.9
+httplib2==0.22.0
+httpx==0.28.1
+idna==3.10
+importlib_metadata==8.7.0
+importlib_resources==6.5.2
+ipykernel==6.30.0
+ipython==8.18.1
+isodate==0.7.2
+itsdangerous==2.2.0
+jedi==0.19.2
+Jinja2==3.1.6
+jiter==0.10.0
+joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+jupyter_client==8.6.3
+jupyter_core==5.8.1
+langchain==0.3.27
+langchain-core==0.3.74
+langchain-openai==0.3.31
+langchain-text-splitters==0.3.9
+langsmith==0.4.16
+looseversion==1.3.0
+lxml==6.0.0
+MarkupSafe==3.0.2
+matplotlib-inline==0.1.7
+nest-asyncio==1.6.0
+networkx==3.2.1
+nibabel==5.3.2
+nipype==1.10.0
+numpy==2.0.2
+openai==1.101.0
+orjson==3.11.2
+packaging==25.0
+pandas==2.3.1
+parso==0.8.4
+pathlib==1.0.1
+pexpect==4.9.0
+pinecone-client==6.0.0
+pinecone-plugin-interface==0.0.7
+platformdirs==4.3.8
+prompt_toolkit==3.0.51
+prov==2.1.1
+psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+puremagic==1.30
+pydantic==2.11.7
+pydantic_core==2.33.2
+pydot==4.0.1
+Pygments==2.19.2
+PyMuPDF==1.26.3
+pyparsing==3.2.3
 PyPDF2==3.0.1
-python-dotenv==1.0.0
-langchain==0.1.5
-langchain-openai==0.0.5
-langchain-text-splitters==0.0.1
-numpy==1.24.3
-tqdm==4.66.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+pytz==2025.2
+pyxnat==1.6.3
+PyYAML==6.0.2
+pyzmq==27.0.0
+rdflib==7.1.4
+regex==2025.7.34
+requests==2.32.4
+requests-toolbelt==1.0.0
+scikit-learn==1.6.1
+scikit-surprise==1.1.4
+scipy==1.13.1
+simplejson==3.20.1
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.43
+stack-data==0.6.3
+surprise==0.1
+tenacity==9.1.2
+threadpoolctl==3.6.0
+tiktoken==0.11.0
+tornado==6.5.1
+tqdm==4.67.1
+traitlets==5.14.3
+traits==7.0.2
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+tzdata==2025.2
+urllib3==2.5.0
+wcwidth==0.2.13
+Werkzeug==3.1.3
+zipp==3.21.0
+zstandard==0.24.0
