--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 PINECONE_API_KEY=your_pinecone_api_key_here
 PINECONE_INDEX_HOST=fraud-detection-index-host
+OPENAI_API_KEY=your_openai_api_key_here
