--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 PINECONE_API_KEY=your_pinecone_api_key_here
 PINECONE_INDEX_HOST=fraud-detection-index-host
 OPENAI_API_KEY=your_openai_api_key_here
+AWS_ACCESS_KEY_ID="your-aws-access-key-id"
+AWS_SECRET_ACCESS_KEY="your-aws-secret-access-key"
