--- a/services/worker/requirements.txt
+++ b/services/worker/requirements.txt
@@ -1,1 +1,9 @@
-websockets
+boto3==1.40.21
+botocore==1.40.21
+jmespath==1.0.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+s3transfer==0.13.1
+six==1.17.0
+urllib3==1.26.20
+websockets==15.0.1
