--- a/services/render.yaml
+++ b/services/render.yaml
@@ -1,13 +1,16 @@
 services:
   - type: web
-    name: my-backend
-    env: python
-    plan: free 
+    name: SentinelAI-services
+    runtime: python
+    plan: free
     rootDir: services
     buildCommand: |
-      apt-get update && apt-get install -y tesseract-ocr
+      # Update package list and install Tesseract
+      apt-get update && apt-get install -y tesseract-ocr libtesseract-dev libleptonica-dev pkg-config
+      # Install Python dependencies
+      pip install --upgrade pip
       pip install -r requirements.txt
     startCommand: uvicorn app:app --host 0.0.0.0 --port 10000
-
-    aptDependencies:
-      - tesseract-ocr
+    envVars:
+      - key: TESSERACT_CMD
+        value: /usr/bin/tesseract
