--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,6 @@ mcp-server-env/
 sentinelai-469909-e15517319434.json
 
 services/test/worker/*.json
+ocr_extraction.py
+debug_mcp.py
+test_mcp_connection.py
